[package]
name = "st-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = []
tunnel = ["x25519-dalek", "chacha20poly1305", "rand"]

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
